--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
                 <div id="resultado"></div>
                 <span id="nomeArquivo" class="nome-arquivo">Nenhum arquivo selecionado</span>
             </div>
-            <button type="submit" class="btn-enviar">Processar Arquivo</button>
+            <button type="submit" class="btn-enviar">Processar Arquivo    <i class="fa-solid fa-file" ></i></button>
         </form>
     </section>
     <script src="./js/uploadArquivo.js"></script>
